Cambios en Galeria

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li class="enlaces"><a href="#inicio">Inicio</a></li>
                 <li class="enlaces"><a href="#productos">Productos</a></li>
                 <li class="enlaces"><a href="#contacto">Contacto</a></li>
-                <li class="enlaces"><a href="./login.html">Registrarse</a></li>
+                <li class="enlaces"><a href="./registro.html">Registrarse</a></li>
                 <li class="enlaces"><a href="./login.html">Ingresar</a></li>
             </ul>
         </nav>
@@ -43,7 +43,7 @@
                 <li class="enlaces"><a  href="./index.html">Inicio</a></li>
                 <li class="enlaces"><a  href="#productos">Productos</a></li>
                 <li class="enlaces"><a  href="#contacto">Contacto</a></li>
-                <li class="enlaces"><a href="#login">Registrarse</a></li>
+                <li class="enlaces"><a href="./registro.html">Registrarse</a></li>
                 <li class="enlaces"><a href="./login.html">Ingresar</a></li>
             </ul>
         </div>
